# eq-cir-management-ui

./: .copier-answers.yml  .gitignore  .mega-linter.yml  .prettierrc  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  gunicorn_config.py  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/linters/: .markdown-link-check.json
.github/workflows/: ci.yml  codeql.yml  mega-linter.yml
eq_cir_management_ui/: __init__.py  app.py
eq_cir_management_ui/config/: config.py
eq_cir_management_ui/errors/: __init__.py  routes.py
eq_cir_management_ui/forms/: validation_version_form.py
eq_cir_management_ui/main/: __init__.py  routes.py
eq_cir_management_ui/utils/: jinja_functions.py  routes.py
templates/: base.html  error.html  home.html  migrating.html  start-migration.html
templates/errors/: 401.html  403.html  404.html  500.html  base-error.html
templates/partials/: error_panel.html
tests/unit/: conftest.py  test_app_factory.py  test_config.py  test_errors.py  test_routes.py
